# tenetui

./: CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  demo.tape
.github/workflows/: ci.yml
benches/: hot_paths.rs
docs/: architecture.md  decisions.md  m4-plan.md  m5-plan.md  m6-plan.md  roadmap.md  whitepaper.md
src/: app.rs  config.rs  diff.rs  functions.rs  input.rs  lib.rs  main.rs  syntax.rs  theme.rs
src/repo/: blame.rs  mod.rs  prefetch.rs  snapshot.rs  volatility.rs  walk.rs
src/ui/: filepane.rs  help.rs  map.rs  mod.rs  overview.rs  picker.rs  statusbar.rs  timeline.rs
